cli/tests/error_020_stack_constructor.ts.out
[WILDCARD]Error: constructor
    at new A ([WILDCARD]tests/error_020_stack_constructor.ts:[WILDCARD])
    at [WILDCARD]tests/error_020_stack_constructor.ts:[WILDCARD]
error: Uncaught Error: constructor
    throw new Error("constructor");
          ^
    at new A ([WILDCARD]tests/error_020_stack_constructor.ts:[WILDCARD])
    at [WILDCARD]tests/error_020_stack_constructor.ts:[WILDCARD]
